--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="cv" class="instaFade">
 	<div class="mainDetails">
 		<div id="headshot" class="quickFade">
-			<img src="Foto.JPEG" alt="Boriyeisi Gonzalez"/>
+			<img src="Foto.jpeg" alt="Boriyeisi Gonzalez"/>
 		</div>
 
 		<div id="name">
